fix(module:nz-alert): fix overlap of close button with alert's message

--- a/components/alert/style/index.less
+++ b/components/alert/style/index.less
@@ -121,6 +121,10 @@
     display: block;
   }
 
+  &&-closeable {
+    padding-right: 36px;
+  }
+
   &&-close {
     height: 0 !important;
     margin: 0;
